# ak_motor_api

./: CAN_TTL_PROTO_y.ptp  CMakeLists.txt  README.md  main.cpp  mini_tdd.h  notes-code.txt  notes-protochol.txt
ex_apis/: serial_port_api.cpp  serial_port_api.h  tcp_client_api.h  tcp_server_api.h
t_motor/: ak_motor.h  ak_motor_container.h  ak_params.h  can_packet.h  control.h  mit_parser.h  queue_fifo.h  serial_crc.h
